--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>second</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, expedita!</h1>
+    <h1>My First Git</h1>
+    <h1>Website not working</h1>
+    <h1>still not working</h1>
+    <h2>Added Somethings</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam, delectus sunt totam soluta quam harum. Dolorem sunt magnam voluptates!</p><hr>
+    <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit sint veniam vel nesciunt perferendis?</b>
+</body>
 </body>
 </html>
