--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h2>Added Somethings</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam, delectus sunt totam soluta quam harum. Dolorem sunt magnam voluptates!</p><hr>
     <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit sint veniam vel nesciunt perferendis?</b>
+    <hr>
+    <a href="https://www.google.com/" target="_blank">google</a>
 </body>
 </body>
 </html>
