--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>second</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="shortcut icon" href="star.jpg" type="image/x-icon">
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, expedita!</h1>
@@ -17,6 +18,23 @@
     <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit sint veniam vel nesciunt perferendis?</b>
     <hr>
     <a href="https://www.google.com/" target="_blank">google</a>
+    <hr>
+    <div>
+        <ol class="ol">
+            <li>apple</li>
+            <li>banana</li>
+            <li>mango</li>
+            <li>graps</li>
+            <li>orange</li>
+        </ol>
+        <ul class="ul">
+            <li>Bike</li>
+            <li>car</li>
+            <li>Bus</li>
+            <li>Truck</li>
+            <li>plane</li>
+        </ul>
+    </div>    
 </body>
 </body>
 </html>
