--- a/index.html
+++ b/index.html
@@ -35,6 +35,30 @@
             <li>plane</li>
         </ul>
     </div>    
+    <br><br>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Blood Group</th>
+        </tr>
+        <tr>
+            <td>Shanto</td>
+            <td>25</td>
+            <td>A+</td>
+        </tr>
+        <tr>
+            <td>Rupo</td>
+            <td>27</td>
+            <td>B+</td>
+        </tr>
+        <tr>
+            <td>Joy</td>
+            <td>22</td>
+            <td>A-</td>
+        </tr>
+    </table>
 </body>
 </body>
 </html>
