--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <td>A-</td>
         </tr>
     </table>
+    <dl>
+        <dt>Apple</dt>
+        <dd>_apple is sweet</dd>
+    </dl>
 </body>
 </body>
 </html>
