max-width bottom

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
         <dt>Apple</dt>
         <dd>_apple is sweet</dd>
     </dl>
+    <div>
+        <div class="m1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, fuga numquam. Odio non excepturi cumque?</div>
+    </div><br>
+    <div>
+        <div class="m2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illum accusantium inventore architecto nulla ducimus explicabo quam possimus optio laboriosam.</div>
+    </div>
 </body>
 </body>
 </html>
